header, action and counter css added

--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
     <title>Cool Dark UI Template for Webflow Agencies!</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
-<body>
-    <Header>
-        <nav>
-            <div class="log">
-                <span>LOGO</span>
+<body class="raleway-normal">
+    <Header class="header">
+        <div class="header-container bg-container">
+            <nav class="nav">
+                <div class="logo primary-color">
+                    <span>LOGO</span>
+                </div>
+                <button class="btn-primary">Sign Up</button>
+            </nav>
+            <div class="header-content">
+                <h1 class="header-title">Cool Dark UI Template for Webflow Agencies!</h1>
+                <button class="btn-primary">Stay Focused</button>
             </div>
-            <button>Sign Up</button>
-        </nav>
-        <div>
-            <h1>Cool Dark UI Template for Webflow Agencies!</h1>
-            <button>Stay Focused</button>
         </div>
     </Header>
     <main>
-        <section class="action-container">
+        <section class="action-container bg-container">
             <div class="action-text">
                 <h3 class="action-title">See It in Action</h3>
                 <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
-                <button>Launch Live Preview</button>
+                <button class="btn-primary">Launch Live Preview</button>
             </div>
             <div class="action-img"><img src="Assets/wc-mini.png" alt=""></div>
         </section>
         <!-- counter section -->
-         <section class="counter">
+         <section class="counter bg-container text-center">
             <h3 class="counter-header">Joined Thousands of Productive Users</h3>
             <div class="counter-items">
                 <div class="counter-item">
@@ -50,7 +54,7 @@
             </div>
          </section>
          <!-- user section -->
-          <section class="testimonial">
+          <section class="testimonial bg-container">
             <h2 class="testmonial-header">What our users say</h2>
             <div class="testimonial-items">
                 <div class="destimonial-item">
