--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
           </section>
           <!-- focus section -->
-        <section class="focus-container">
+        <section class="focus-container text-center bg-container">
             <h2 class="focus-header">Ready to focus better</h2>
             <p class="focus-description">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="btn-primary">Ger started Free</button>
