--- a/index.html
+++ b/index.html
@@ -124,29 +124,31 @@
             </div>
         </section>
         <!-- contact section -->
-        <section class="contact-container">
-            <h2 class="contact-title"></h2>
-            <form action="">
+        <section class="contact-container bg-container">
+            <h2 class="contact-title">Let’s Get in Touch</h2>
+            <form action="" class="form">
                 <label for="Email">Email</label>
                 <input type="Email" name="Email" placeholder="example@email.com">
                 <label for="Name">Name</label>
                 <input type="text" name="text" placeholder="Full Name">
                 <label for="Message">Message</label>
-                <textarea name="testarea" id="" columns="15" rows="20"></textarea>
-                <input type="submit" value="Get in Touch">
+                <textarea name="testarea" id="" columns="5" rows="5" placeholder="Write your Message...">W</textarea>
+                <input type="submit" value="Get in Touch" class="btn-primary btn-form">
             </form>
         </section>
     </main>
-    <footer>
-        <div class="footer-logo">Logo</div>
-        <div class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</div>
-        <div class="footer-menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Services</a></li>
-            </ul>
+    <footer class="footer">
+        <div class="footer-container bg-container">
+            <div class="footer-logo">Logo</div>
+            <div class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</div>
+            <div class="footer-menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
