footer css added

--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
                 <label for="Name">Name</label>
                 <input type="text" name="text" placeholder="Full Name">
                 <label for="Message">Message</label>
-                <textarea name="testarea" id="" columns="5" rows="5" placeholder="Write your Message...">W</textarea>
+                <textarea name="testarea" id="" columns="5" rows="5" placeholder="Write your Message..."></textarea>
                 <input type="submit" value="Get in Touch" class="btn-primary btn-form">
             </form>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer text-center">
         <div class="footer-container bg-container">
-            <div class="footer-logo">Logo</div>
+            <div class="footer-logo primary-color">LOGO</div>
             <div class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</div>
             <div class="footer-menu">
                 <ul>
