added all HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <div class="logo primary-color">
                     <span>LOGO</span>
                 </div>
-                <button class="btn-primary">Sign Up</button>
+                <button class="btn-primary"><a href="">Sign Up</a></button>
             </nav>
             <div class="header-content">
                 <h1 class="header-title">Cool Dark UI Template for Webflow Agencies!</h1>
-                <button class="btn-primary">Stay Focused</button>
+                <button class="btn-primary"><a href="">Stay Focused</a></button>
             </div>
         </div>
     </Header>
@@ -31,7 +31,7 @@
             <div class="action-text">
                 <h3 class="action-title">See It in Action</h3>
                 <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
-                <button class="btn-primary">Launch Live Preview</button>
+                <button class="btn-primary"><a href="">Launch Live Preview</a></button>
             </div>
             <div class="action-img"><img src="Assets/wc-mini.png" alt=""></div>
         </section>
@@ -118,7 +118,7 @@
         <section class="focus-container text-center bg-container">
             <h2 class="focus-header">Ready to focus better</h2>
             <p class="focus-description">This template instantly leveled up our presence.” – Studio Vertex</p>
-            <button class="btn-primary">Ger started Free</button>
+            <button class="btn-primary"><a href="">Get started Free</a></button>
             <div class="focus-img">
                 <img src="Assets/wc-big.png" alt="">
             </div>
